# Samples

TestAntEclipse/: build.properties  build.xml
TestAntEclipse/src/ru/home/: HelloWorld.java  Text.java
example_1/hello/: Makefile-own  main.c  make_hello
example_1/hello/src/foo/: foo.h
example_1/hello/src/functions/: tosay.c
example_1/hello_cmake/: CMakeLists.txt
example_1/hello_cmake/src/foo/: foo.c
example_1/hello_cmake/src/functions/: functions.h  tofact.c
example_1/tree_cmake/: CMakeLists.txt  README  asbuild.py  build.sh  builder  clean.sh  comp.sh  create_libs.sh  custom.sh  dependses  download.sh  install.sh  rebuild.sh
example_1/tree_cmake/CMakes/boost/: CMakeLists.txt
example_1/tree_cmake/CMakes/cpp-netlib/: CMakeLists.txt
example_1/tree_cmake/CMakes/ffmpeg/: CMakeLists.txt  CMakeLists.txt~  build.sh  build.sh~  install.sh  make.sh  make.sh~
example_1/tree_cmake/CMakes/freeimage/: CMakeLists.txt
example_1/tree_cmake/CMakes/freetype/: CMakeLists.txt
example_1/tree_cmake/CMakes/fribidi/: CMakeLists.txt  CMakeLists.txt~
example_1/tree_cmake/CMakes/gflags/: CMakeLists.txt
example_1/tree_cmake/CMakes/glew/: CMakeLists.txt
example_1/tree_cmake/CMakes/glog/: CMakeLists.txt
example_1/tree_cmake/CMakes/googletest/: CMakeLists.txt
example_1/tree_cmake/CMakes/libass/: CMakeLists.txt  CMakeLists.txt~  build.sh  build.sh~
example_1/tree_cmake/CMakes/libxml2/: CMakeLists.txt
example_1/tree_cmake/CMakes/live555/: CMakeLists.txt
example_1/tree_cmake/CMakes/mongocxx/: CMakeLists.txt  CMakeLists.txt~
example_1/tree_cmake/CMakes/ogre/: CMakeLists.txt  CMakeLists.txt~
example_1/tree_cmake/CMakes/openssl/: CMakeLists.txt
example_1/tree_cmake/CMakes/portaudio/: CMakeLists.txt
example_1/tree_cmake/CMakes/protobuf/: CMakeLists.txt
example_1/tree_cmake/CMakes/qtpropertybrowser/: CMakeLists.txt~  build.sh  build.sh~
example_1/tree_cmake/CMakes/qwt/: build.sh
example_1/tree_cmake/CMakes/rtmp/: CMakeLists.txt
example_1/tree_cmake/CMakes/rtmpdump/: CMakeLists.txt  CMakeLists.txt~
example_1/tree_cmake/CMakes/sdl/: CMakeLists.txt
example_1/tree_cmake/CMakes/theora/: CMakeLists.txt
example_1/tree_cmake/CMakes/vorbis/: CMakeLists.txt  CMakeLists.txt~
example_1/tree_cmake/CMakes/x264/: CMakeLists.txt  CMakeLists.txt~  build.sh
example_1/tree_cmake/CMakes/x265/: CMakeLists.txt
example_1/tree_cmake/CMakes/yasm/: CMakeLists.txt
example_1/tree_cmake/patchs/: ogre.diff
example_1/tree_cmake/scripts/: comp.sh  download.sh
example_1/tree_cmake/source/libxml2/: CMakeLists.txt  README.txt  build.sh
